# makao

./: CMakeLists.txt  CardDeckImages.cpp  CardDeckImages.hpp  CardDeckTextures.cpp  CardDeckTextures.hpp  CardsTypes.hpp  main.cpp
